# models/admin.go
@@ -37,3 +37,9 @@ type AdminLoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type AdminLoginResponse struct {
+	Data  AdminDataResponse `json:"data"`
+	Roles []string          `json:"roles"`
+	Token string            `json:"token"`
+}
